--- a/resources/application.properties
+++ b/resources/application.properties
@@ -2,3 +2,5 @@ db.url=jdbc:postgresql://localhost:5432/postgres
 db.user=postgres
 db.password=postgres
 db.driver=org.postgresql.Driver
+
+image.base.url=C:/Users/kainv/IdeaProjects/Courses dmdev/HttpServlets/images
