HTTP. Servlets. 48. Tag img

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -3,4 +3,4 @@ db.user=postgres
 db.password=postgres
 db.driver=org.postgresql.Driver
 
-image.base.url=C:/Users/kainv/IdeaProjects/Courses dmdev/HttpServlets/images
+image.base.url=C:/Users/kainv/Desktop/images
