--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <!-- Устанавливаем страницу ошибки, на которую будут перенаправляться пользователи в случае ошибок -->
+    <error-page>
+        <!-- Отображаем страницу ошибки в случае 500й ошибки. В этом в фильтре для dispatcher types указать ERROR -->
+        <!-- error-code>500</error-code -->
+
+        <!-- Отображаем страницу ошибки в случае любого Exception типа Throwable -->
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/WEB-INF/jsp/500.jsp</location>
+    </error-page>
 </web-app>
