HTTP. Servlets. 55. Интернационализация и локализация. JSP

--- a/resources/translations.properties
+++ b/resources/translations.properties
@@ -1,1 +1,5 @@
+page.login.email=Email
 page.login.password=Password
+page.login.submit.button=Log In
+page.login.register.button=Registration page
+page.login.error=Email or password is not correct
